--- a/stylesheets/menubar.css
+++ b/stylesheets/menubar.css
@@ -1,14 +1,14 @@
 .menubar {
   position: fixed;
-  display: flex;
-  justify-content: flex-end;
   top: 0;
   left: 0;
+  display: flex;
+  justify-content: flex-end;
   width: calc(100% - 300px);
-  margin-left: 300px;
   height: 70px;
+  margin-left: 300px;
   border-bottom: 1px solid lightgrey;
-  z-index: 2;
+  z-index: 1;
 }
 
 .userMenu {
@@ -22,8 +22,8 @@
   text-align: center;
   line-height: 70px;
   font-family: FontAwesome;
-  font-size: 30px;
-  content: '\f2be'
+  font-size: 20px;
+  content: '\f2be';
 }
 
 .userMenu ul {
@@ -48,7 +48,7 @@
   cursor: pointer;
 }
 
-.userMenu Li:hover {
+.userMenu li:hover {
   background: lightgrey;
 }
 
@@ -61,11 +61,11 @@
 }
 
 .userMenu ul::before {
-  top: -8px;
+  top: -9px;
   right: 14px;
   width: 20px;
   height: 20px;
-  box-shadow: 0 0 5px 0 rgba(0,0,0,0.15);
+  box-shadow: 0 0 5px 0 rgba(0,0,0,.15);
   transform: rotate(45deg);
 }
 
