--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -2,3 +2,18 @@
   padding-top: 70px;
   padding-left: 300px;
 }
+
+.content .container {
+  margin-bottom: 50px;
+}
+
+.content .row {
+  margin-bottom: 10px;
+}
+
+.content .row > div {
+  background:  rgba(0, 0, 0, 0.05);
+  border: 1px solid lightgrey;
+  text-align: center;
+  height: 60px;
+}
